--- a/README.adoc
+++ b/README.adoc
@@ -1,14 +1,28 @@
 = Onyx Tool
 
-This Gui Tool eases the production of Onyx Assessments, by wrapping the exported text structure in a nice api.
-
-The Onyx Tool is split into different parts
 
 == Gui
 
 The Gui `Frontend` of this tool, will only be a simple application for traversing the onyx structure
+It will be developed using `JavaFX`.
 
 == Onyx
 
-The main part of this tool. It takes care of parsing the xml structure,
-reprensenting it in a sensible API and give the means to modify it and export it to a new test.
+Das Hauptpaket dieses Repos. Es beinhaltet 2 Teile
+
+=== QTI IMS Wrapper
+
+Der QTI IMS Wrapper kümmert sich um den _Boilerplate Code_ der von der Bibliothek JQTI+ benötigt wird.
+Ziel des Wrappers soll es sein, das Parsen und Modifizieren der Assessments zu vereinfachen.
+
+Die JQTI+ Bibliothek wird in der `build.gradle` herangezogen.
+
+=== OnyxAPI
+
+Diese API kümmert sich darum, dass Onyx Aufgaben effizient dupliziert und modifiziert werden können.
+
+Vorrangig soll es möglich sein, sog. _changeRequests_ von bestehenden Aufgaben zu erstellen, die letztlich nur einige wenige sachen ändern.
+Weiterhin sollen diese Requests auf Richtigkeit und Integrität überprüft werden.
+
+Diese Requests sollen im JSON Format eingelesen werden. Dafür wird die Bibliothek `org.json` benutzt.
+
